<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="abc_action_bar_home_description">Navigate home</string>
<string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
<string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
<string name="abc_action_bar_up_description">Navigate up</string>
<string name="abc_action_menu_overflow_description">More options</string>
<string name="abc_action_mode_done">Done</string>
<string name="abc_activity_chooser_view_see_all">See all</string>
<string name="abc_activitychooserview_choose_application">Choose an app</string>
<string name="abc_capital_off">OFF</string>
<string name="abc_capital_on">ON</string>
<string name="abc_search_hint">Search…</string>
<string name="abc_searchview_description_clear">Clear query</string>
<string name="abc_searchview_description_query">Search query</string>
<string name="abc_searchview_description_search">Search</string>
<string name="abc_searchview_description_submit">Submit query</string>
<string name="abc_searchview_description_voice">Voice search</string>
<string name="abc_shareactionprovider_share_with">Share with</string>
<string name="abc_shareactionprovider_share_with_application">Share with %s</string>
<string name="abc_toolbar_collapse_description">Collapse</string>
<string name="status_bar_notification_info_overflow">999+</string>
<string name="Cancel">Cancel</string>
<string name="Confirm">Confirm</string>
<string name="DescriptionBassBoost">Boost or amplify low frequencies of the sound. (Earphone required)</string>
<string name="DescriptionEqualizer">Provide varied sound effect and user setting.</string>
<string name="DescriptionLoudnessMaximizer">Maximize speaker maximum volume.(Speaker only)</string>
<string name="DescriptionReverb">Generate sound within a room travels in many directions.</string>
<string name="DescriptionTrebleEnhance">Adds more brilliance and clarity to the sound.</string>
<string name="DescriptionVitualizer">Spatialize audio channels. (Earphone required)</string>
<string name="SettingEqBassBoost">Bass Boost</string>
<string name="SettingEqEqualizer">Equalizer</string>
<string name="SettingEqLoudnessMaximizer">Loudness Maximizer</string>
<string name="SettingEqPresetReverb">Reverb</string>
<string name="SettingEqTrebleEnhance">Treble Boost</string>
<string name="SettingEqVirtualizer">Virtualizer</string>
<string name="SettingNotiSaveToUserPreset">User preset change saved</string>
<string name="SettingNotiStartEditUserPreset">When editing is over, save as User preset</string>
<string name="TitleEQSetting">Equalizer preset</string>
<string name="TitleEffectSetting">Sound Effect</string>
<string name="TitlePanelPicker">Select sound effect</string>
<string name="TitleUnSet">No Effect</string>
<string name="TitleUserPreset">User preset</string>
<string name="app_name">Sound Effect</string>
<string name="audio_effect_must_use_the_startActivityForResult">The calling application must use the startActivityForResult(Intent, int) method to launch the control panel so that its package name is indicated and used by the control panel application to keep track of changes for this particular application.</string>
<string name="cpu_load_limit_exceeded_for_audio_effect">CPU Load limit exceeded for Fx Equalizer</string>
<string name="eq_slider_range_01">+15db</string>
<string name="eq_slider_range_02">0db</string>
<string name="eq_slider_range_03">-15db</string>
<string name="menu_reset_title">Reset</string>
<string name="popupAudioEffectLackOfResource">Disable audio effect due to a lack of system resource</string>
<string name="presetEqualizerTitleAcoustic">Acoustic</string>
<string name="presetEqualizerTitleBassEnhance">Bass Enhance</string>
<string name="presetEqualizerTitleBlues">Blues</string>
<string name="presetEqualizerTitleClassical">Classical</string>
<string name="presetEqualizerTitleCountry">Country</string>
<string name="presetEqualizerTitleDance">Dance</string>
<string name="presetEqualizerTitleDisco">Disco</string>
<string name="presetEqualizerTitleFlat">Flat</string>
<string name="presetEqualizerTitleFolk">Folk</string>
<string name="presetEqualizerTitleGrunge">Grunge</string>
<string name="presetEqualizerTitleHeavyMetal">Heavy Metal</string>
<string name="presetEqualizerTitleHipHop">Hip Hop</string>
<string name="presetEqualizerTitleJazz">Jazz</string>
<string name="presetEqualizerTitleLive">Live</string>
<string name="presetEqualizerTitleMetal">Metal</string>
<string name="presetEqualizerTitleMidEnhance">Mid Enhance</string>
<string name="presetEqualizerTitleNormal">Normal</string>
<string name="presetEqualizerTitlePop">Pop</string>
<string name="presetEqualizerTitleRap">Rap</string>
<string name="presetEqualizerTitleReggae">Reggae</string>
<string name="presetEqualizerTitleRock">Rock</string>
<string name="presetEqualizerTitleRockRoll">Rock+Roll</string>
<string name="presetEqualizerTitleSpeechVocal">Speech+Vocal</string>
<string name="presetEqualizerTitleSwing">Swing</string>
<string name="presetEqualizerTitleTechno">Techno</string>
<string name="presetEqualizerTitleTrebleEnhance">Treble Enhance</string>
<string name="presetEqualizerTitleUrban">Urban</string>
<string name="presetReverbTitleLargerHall">Large hall</string>
<string name="presetReverbTitleLargerRoom">Large room</string>
<string name="presetReverbTitleMediumHall">Medium hall</string>
<string name="presetReverbTitleMediumRoom">Medium room</string>
<string name="presetReverbTitlePlate">Plate</string>
<string name="presetReverbTitleSmallRoom">Small room</string>
<string name="presetReverbTitleUnSet">None</string>
</resources>
