<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:gravity="center" android:paddingLeft="14.0dip" android:paddingTop="11.0dip" android:paddingRight="14.0dip" android:paddingBottom="11.0dip" android:layout_width="fill_parent" android:layout_height="63.0dip">
		<Spinner android:id="@id/eqsetting_equalizer_spinner" style="@style/Spinner_Layout" />
	</LinearLayout>
	<LinearLayout style="@style/Line_Divider_Layout" />
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
		<LinearLayout android:orientation="vertical" android:layout_width="50.0dip" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginTop="25.0dip" android:layout_marginBottom="344.0px">
			<TextView android:textSize="12.0sp" android:textColor="@color/colorGrayblue" android:gravity="top" android:layout_gravity="center|top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eq_slider_range_01" android:layout_weight="1.0" />
			<TextView android:textSize="12.0sp" android:textColor="@color/colorGrayblue" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eq_slider_range_02" android:layout_weight="1.0" />
			<TextView android:textSize="12.0sp" android:textColor="@color/colorGrayblue" android:gravity="bottom" android:layout_gravity="bottom|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eq_slider_range_03" android:layout_weight="1.0" />
		</LinearLayout>
		<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
			<ImageView android:background="#ffe2e2e5" android:layout_width="289.0dip" android:layout_height="1.0dip" android:layout_marginTop="556.0px" />
			<LinearLayout android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/body_vertival_slide_group" android:layout_width="wrap_content" android:layout_height="fill_parent" />
		</FrameLayout>
	</LinearLayout>
</LinearLayout>
